--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
-<!DOCTYPE html>
+
 <html>
 <head>
-<title>Index</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Believe it or not - how can credibility be achieved visually?</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="parallax.js"></script>
+	
+    <link rel="stylesheet" href="style.css">
+	
+	
+	
 </head>
 <body>
+	
+<div class="parallax-window" data-parallax="scroll" data-image-src="images/piks_002.png"></div>
 
-<h1>yoooooooo</h1>
-<p>My first paragraph. alrighhtt</p>
+ <div id="bg">
+    <img src="images/bg.png" />
+</div>
+
+
+
+<div id="footer">
+
+    <img src="images/text_big.png" />
+    <img src="images/bg2.png" />
+</div> 
+
+
+
 
 </body>
 </html>
