--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Believe it or not - how can credibility be achieved visually?</title>
-    <meta name="description" content="A thesis on hoaxes, how they work, why they work, and credibility">
+    <meta name="description" content="<p> A thesis on hoaxes, how they work, why they work, and credibility</p> <p> ok so what i really need to figure out, is how to use PARALLAX SCROLLING/WHATEVER ELSE to achieve this kind of effect (for instance, several images stacked on top of each other and when you scroll, they all are moving with different speed or maybe in different directions (up/down) <i> https://prinzhorn.github.io/skrollr </i> also i need to figure out how to do this, but also with different length of the slide (here the sixe of 1 slide is the screen size, but i need some to be longer or shorter) <i> http://kabk.github.io/govt-theses-15-nina-couvert-the-power-of-fascination</i>"  >
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="parallax.js"></script>
