--- a/index.html
+++ b/index.html
@@ -4,34 +4,134 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Believe it or not - how can credibility be achieved visually?</title>
-    <meta name="description" content="<p> A thesis on hoaxes, how they work, why they work, and credibility</p> <p> ok so what i really need to figure out, is how to use PARALLAX SCROLLING/WHATEVER ELSE to achieve this kind of effect (for instance, several images stacked on top of each other and when you scroll, they all are moving with different speed or maybe in different directions (up/down) <i> https://prinzhorn.github.io/skrollr </i> also i need to figure out how to do this, but also with different length of the slide (here the sixe of 1 slide is the screen size, but i need some to be longer or shorter) <i> http://kabk.github.io/govt-theses-15-nina-couvert-the-power-of-fascination</i>"  >
+    <meta name="description" content="<p> A thesis on hoaxes, how they work, why they work, and credibility</p> >
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="parallax.js"></script>
-	
+<script>
+var _0x3370=["\x24\x28\x61\x29\x2E\x54\x28\x62\x28\x29\x7B\x38\x3D\x30\x3B\x50\x3D\x24\x28\x27\x2E\x39\x27\x29\x2E\x49\x2D\x31\x3B\x6C\x3D\x24\x28\x27\x2E\x39\x27\x29\x2E\x49\x3B\x24\x28\x27\x2E\x39\x27\x29\x2E\x76\x28\x62\x28\x29\x7B\x24\x28\x33\x29\x2E\x34\x28\x7B\x6C\x3A\x6C\x2C\x51\x3A\x31\x7D\x29\x3B\x6C\x2D\x2D\x7D\x29\x3B\x24\x28\x61\x29\x2E\x45\x28\x62\x28\x29\x7B\x37\x3D\x30\x3B\x66\x3D\x24\x28\x61\x29\x2E\x35\x28\x29\x3B\x24\x28\x27\x2E\x39\x27\x29\x2E\x76\x28\x62\x28\x29\x7B\x36\x3D\x24\x28\x33\x29\x2E\x73\x28\x27\x2E\x72\x27\x29\x2E\x52\x28\x29\x3B\x64\x28\x36\x3C\x66\x29\x7B\x24\x28\x33\x29\x2E\x34\x28\x7B\x35\x3A\x66\x7D\x29\x3B\x24\x28\x33\x29\x2E\x73\x28\x27\x2E\x72\x27\x29\x2E\x34\x28\x7B\x4A\x3A\x28\x66\x2D\x36\x29\x2F\x32\x7D\x29\x3B\x36\x3D\x66\x7D\x79\x7B\x24\x28\x33\x29\x2E\x34\x28\x7B\x35\x3A\x36\x7D\x29\x3B\x24\x28\x33\x29\x2E\x73\x28\x27\x2E\x72\x27\x29\x2E\x34\x28\x7B\x4A\x3A\x30\x7D\x29\x7D\x64\x28\x24\x28\x33\x29\x2E\x34\x28\x27\x71\x27\x29\x3D\x3D\x27\x4B\x27\x29\x7B\x37\x3D\x37\x2B\x36\x3B\x24\x28\x27\x2E\x69\x27\x29\x2E\x34\x28\x7B\x70\x3A\x37\x7D\x29\x7D\x7D\x29\x3B\x77\x3D\x24\x28\x61\x29\x2E\x63\x28\x29\x3B\x24\x28\x27\x2E\x53\x27\x29\x2E\x76\x28\x62\x28\x29\x7B\x75\x3D\x24\x28\x33\x29\x2E\x74\x28\x29\x2E\x35\x28\x29\x3B\x43\x3D\x75\x2F\x77\x3B\x4F\x3D\x24\x28\x33\x29\x2E\x35\x28\x29\x3B\x7A\x3D\x24\x28\x33\x29\x2E\x63\x28\x29\x3B\x46\x3D\x4F\x2F\x7A\x3B\x64\x28\x43\x3E\x3D\x46\x29\x7B\x24\x28\x33\x29\x2E\x34\x28\x7B\x78\x3A\x27\x41\x27\x2C\x35\x3A\x75\x2B\x27\x6A\x27\x2C\x63\x3A\x27\x42\x27\x7D\x29\x3B\x47\x3D\x28\x28\x24\x28\x33\x29\x2E\x74\x28\x29\x2E\x63\x28\x29\x2D\x24\x28\x33\x29\x2E\x63\x28\x29\x29\x2F\x32\x29\x3B\x24\x28\x33\x29\x2E\x34\x28\x7B\x4C\x3A\x47\x2B\x27\x6A\x27\x7D\x29\x7D\x79\x7B\x24\x28\x33\x29\x2E\x34\x28\x7B\x4C\x3A\x27\x41\x27\x2C\x63\x3A\x77\x2B\x27\x6A\x27\x2C\x35\x3A\x27\x42\x27\x7D\x29\x3B\x6B\x3D\x28\x28\x24\x28\x33\x29\x2E\x74\x28\x29\x2E\x35\x28\x29\x2D\x24\x28\x33\x29\x2E\x35\x28\x29\x29\x2F\x32\x29\x3B\x24\x28\x33\x29\x2E\x34\x28\x7B\x78\x3A\x6B\x2B\x27\x6A\x27\x7D\x29\x7D\x7D\x29\x7D\x29\x2E\x45\x28\x29\x3B\x24\x28\x61\x29\x2E\x31\x31\x28\x62\x28\x29\x7B\x66\x3D\x24\x28\x61\x29\x2E\x35\x28\x29\x3B\x6F\x3D\x24\x28\x61\x29\x2E\x6D\x28\x29\x3B\x44\x3D\x24\x28\x27\x2E\x69\x27\x29\x2E\x35\x28\x29\x3B\x64\x28\x6F\x3E\x44\x29\x7B\x36\x3D\x24\x28\x27\x2E\x39\x27\x29\x2E\x67\x28\x38\x2B\x31\x29\x2E\x35\x28\x29\x3B\x24\x28\x27\x2E\x39\x27\x29\x2E\x67\x28\x38\x2B\x31\x29\x2E\x34\x28\x7B\x71\x3A\x27\x31\x33\x27\x2C\x35\x3A\x36\x7D\x29\x3B\x37\x3D\x37\x2D\x36\x3B\x24\x28\x27\x2E\x69\x27\x29\x2E\x34\x28\x7B\x70\x3A\x37\x7D\x29\x3B\x38\x2B\x2B\x7D\x79\x7B\x6B\x3D\x24\x28\x27\x2E\x39\x27\x29\x2E\x67\x28\x38\x29\x2E\x55\x28\x29\x2E\x78\x3B\x64\x28\x6F\x3C\x3D\x6B\x26\x26\x38\x3E\x30\x29\x7B\x36\x3D\x24\x28\x27\x2E\x39\x27\x29\x2E\x67\x28\x38\x29\x2E\x35\x28\x29\x3B\x37\x3D\x37\x2B\x36\x3B\x24\x28\x27\x2E\x69\x27\x29\x2E\x34\x28\x7B\x70\x3A\x37\x7D\x29\x3B\x24\x28\x27\x2E\x39\x27\x29\x2E\x67\x28\x38\x29\x2E\x34\x28\x7B\x71\x3A\x27\x4B\x27\x7D\x29\x3B\x38\x2D\x2D\x7D\x7D\x7D\x29\x3B\x64\x28\x27\x31\x34\x27\x31\x30\x20\x61\x7C\x7C\x5A\x2E\x56\x29\x7B\x57\x20\x6E\x3D\x30\x3B\x68\x2E\x48\x28\x27\x58\x27\x2C\x62\x28\x65\x29\x7B\x6E\x3D\x24\x28\x68\x29\x2E\x6D\x28\x29\x2B\x65\x2E\x4E\x5B\x30\x5D\x2E\x4D\x7D\x29\x3B\x68\x2E\x48\x28\x27\x59\x27\x2C\x62\x28\x65\x29\x7B\x24\x28\x68\x29\x2E\x6D\x28\x6E\x2D\x65\x2E\x4E\x5B\x30\x5D\x2E\x4D\x29\x3B\x65\x2E\x31\x32\x28\x29\x7D\x29\x7D\x7D\x29\x3B","\x7C","\x73\x70\x6C\x69\x74","\x7C\x7C\x7C\x74\x68\x69\x73\x7C\x63\x73\x73\x7C\x68\x65\x69\x67\x68\x74\x7C\x74\x68\x69\x73\x48\x65\x69\x67\x68\x74\x7C\x6D\x61\x72\x67\x69\x6E\x42\x6F\x74\x7C\x63\x75\x72\x72\x65\x6E\x74\x7C\x63\x75\x72\x74\x61\x69\x6E\x7C\x77\x69\x6E\x64\x6F\x77\x7C\x66\x75\x6E\x63\x74\x69\x6F\x6E\x7C\x77\x69\x64\x74\x68\x7C\x69\x66\x7C\x7C\x77\x69\x6E\x48\x65\x69\x67\x68\x74\x7C\x65\x71\x7C\x64\x6F\x63\x75\x6D\x65\x6E\x74\x7C\x77\x72\x61\x70\x70\x65\x72\x7C\x70\x78\x7C\x74\x6F\x70\x50\x6F\x73\x7C\x7A\x49\x6E\x64\x65\x78\x7C\x73\x63\x72\x6F\x6C\x6C\x54\x6F\x70\x7C\x73\x63\x72\x6F\x6C\x6C\x53\x74\x61\x72\x74\x50\x6F\x73\x7C\x77\x69\x6E\x54\x6F\x70\x7C\x6D\x61\x72\x67\x69\x6E\x42\x6F\x74\x74\x6F\x6D\x7C\x70\x6F\x73\x69\x74\x69\x6F\x6E\x7C\x69\x6E\x6E\x65\x72\x7C\x66\x69\x6E\x64\x7C\x70\x61\x72\x65\x6E\x74\x7C\x70\x61\x6E\x65\x48\x65\x69\x67\x68\x74\x7C\x65\x61\x63\x68\x7C\x70\x61\x6E\x65\x57\x69\x64\x74\x68\x7C\x74\x6F\x70\x7C\x65\x6C\x73\x65\x7C\x69\x6D\x67\x57\x69\x64\x74\x68\x7C\x30\x70\x78\x7C\x61\x75\x74\x6F\x7C\x70\x61\x6E\x65\x52\x61\x74\x69\x6F\x7C\x77\x72\x61\x70\x48\x65\x69\x67\x68\x74\x7C\x72\x65\x73\x69\x7A\x65\x7C\x69\x6D\x67\x52\x61\x74\x69\x6F\x7C\x6C\x65\x66\x74\x50\x6F\x73\x7C\x61\x64\x64\x45\x76\x65\x6E\x74\x4C\x69\x73\x74\x65\x6E\x65\x72\x7C\x6C\x65\x6E\x67\x74\x68\x7C\x6D\x61\x72\x67\x69\x6E\x54\x6F\x70\x7C\x66\x69\x78\x65\x64\x7C\x6C\x65\x66\x74\x7C\x63\x6C\x69\x65\x6E\x74\x59\x7C\x74\x6F\x75\x63\x68\x65\x73\x7C\x69\x6D\x67\x48\x65\x69\x67\x68\x74\x7C\x63\x75\x72\x74\x61\x69\x6E\x73\x7C\x6F\x70\x61\x63\x69\x74\x79\x7C\x6F\x75\x74\x65\x72\x48\x65\x69\x67\x68\x74\x7C\x62\x67\x7C\x6C\x6F\x61\x64\x7C\x6F\x66\x66\x73\x65\x74\x7C\x6D\x73\x4D\x61\x78\x54\x6F\x75\x63\x68\x50\x6F\x69\x6E\x74\x73\x7C\x76\x61\x72\x7C\x74\x6F\x75\x63\x68\x73\x74\x61\x72\x74\x7C\x74\x6F\x75\x63\x68\x6D\x6F\x76\x65\x7C\x6E\x61\x76\x69\x67\x61\x74\x6F\x72\x7C\x69\x6E\x7C\x73\x63\x72\x6F\x6C\x6C\x7C\x70\x72\x65\x76\x65\x6E\x74\x44\x65\x66\x61\x75\x6C\x74\x7C\x72\x65\x6C\x61\x74\x69\x76\x65\x7C\x6F\x6E\x74\x6F\x75\x63\x68\x73\x74\x61\x72\x74","","\x66\x72\x6F\x6D\x43\x68\x61\x72\x43\x6F\x64\x65","\x72\x65\x70\x6C\x61\x63\x65","\x5C\x77\x2B","\x5C\x62","\x67"];eval(function (_0xd697x1,_0xd697x2,_0xd697x3,_0xd697x4,_0xd697x5,_0xd697x6){_0xd697x5=function (_0xd697x3){return (_0xd697x3<_0xd697x2?_0x3370[4]:_0xd697x5(parseInt(_0xd697x3/_0xd697x2)))+((_0xd697x3=_0xd697x3%_0xd697x2)>35?String[_0x3370[5]](_0xd697x3+29):_0xd697x3.toString(36));} ;if(!_0x3370[4][_0x3370[6]](/^/,String)){while(_0xd697x3--){_0xd697x6[_0xd697x5(_0xd697x3)]=_0xd697x4[_0xd697x3]||_0xd697x5(_0xd697x3);} ;_0xd697x4=[function (_0xd697x5){return _0xd697x6[_0xd697x5];} ];_0xd697x5=function (){return _0x3370[7];} ;_0xd697x3=1;} ;while(_0xd697x3--){if(_0xd697x4[_0xd697x3]){_0xd697x1=_0xd697x1[_0x3370[6]]( new RegExp(_0x3370[8]+_0xd697x5(_0xd697x3)+_0x3370[8],_0x3370[9]),_0xd697x4[_0xd697x3]);} ;} ;return _0xd697x1;} (_0x3370[0],62,67,_0x3370[3][_0x3370[2]](_0x3370[1]),0,{}));
+</script>
+
     <link rel="stylesheet" href="style.css">
 	
 	
 	
 </head>
 <body>
-	
-<div class="parallax-window" data-parallax="scroll" data-image-src="images/piks_002.png"></div>
 
- <div id="bg">
+    <div class="menu">
+    <ul>
+        <li><a href="index.html">Leeza Pritychenko</a></li>
+        <li><a href="index.html">Abstract</a></li>
+        <li><a href="index.html">Chapter 1</a></li>
+        <li><a href="index.html">Chapter2</a></li>
+        <li><a href="index.html">Chapter3</a></li>
+        <li><a href="index.html">Chapter4</a></li>
+        <li><a href="index.html">Chapter6</a></li>
+        <li><a href="index.html">Chapter7</a></li>
+        <li><a href="index.html">Conclusion</a></li>
+        <li><a href="index.html">Index of hoaxes</a></li>
+    </ul>
+</div>
+
+<!-- <div class="wrapper">
+<div class="curtain c1"><img class="bg" src="images/pikkk.jpg" alt=""><span class="overlay"></span>
+    <div class="inner">
+        <h1>"I have not failed.<br>I’ve just found 10,000 ways that won't work."</h1>
+        <h2>Thomas A. Edison</h2>
+    </div>
+</div>
+<div class="curtain c2"><img class="bg" src="images/pikkk2.jpg" alt=""><span class="overlay"></span><br>
+    <div class="inner">
+        <h1>"Live as if you were to die tomorrow.<br>Learn as if you were to live forever."</h1>
+        <h2>Mahatma Gandhi</h2>
+        <br>
+    </div>
+</div>
+<div class="curtain c3"><img class="bg" src="blinds/pic3.jpg" alt=""><span class="overlay"></span><br>
+    <div class="inner">
+        <h1>"No one can make you feel inferior without your consent."</h1>
+        <h2>Eleanor Roosevelt</h2>
+        <br>
+    </div>
+</div>
+<div class="curtain c4"><img class="bg" src="blinds/pic4.jpg" alt=""><span class="overlay"></span><br>
+    <div class="inner">
+        <h1>"You have to learn the rules of the game, and then you have to play better than anyone else."</h1>
+        <h2>Albert Einstein</h2>
+        <br>
+    </div>
+</div>
+<div class="curtain c5"><img class="bg" src="blinds/pic5.jpg" alt=""><span class="overlay"></span><br>
+    <div class="inner">
+        <h1>"Don't let the fear of losing be greater than the excitement of winning."</h1>
+        <h2>Robert Kiyosaki</h2>
+        <br>
+    </div>
+</div>
+<div class="curtain c6"><img class="bg" src="blinds/pic6.jpg" alt=""><span class="overlay"></span><br>
+    <div class="inner">
+        <h1>"The question isn't who is going to let me;<br>it's who is going to stop me."</h1>
+        <h2>Ayn Rand</h2>
+        <br>
+    </div>
+</div>
+<div class="curtain c1"><img class="bg" src="blinds/pic7.jpg" alt=""><span class="overlay"></span><br>
+    <div class="inner">
+        <h1>Vertical Blinds - Quotations</h1>
+        <p>by</p>
+        <h2><a href="http://www.cssplay.co.uk/">CSS play</a></h2>
+        <h2>6th August 2014</h2>
+        <p>A second responsive vertical scrolling template with overlapping sections.<br>Works in all the latest browsers and OS, including IE7+, Android and Windows 8 smartphones.</p>
+        <p><a accesskey="C" href="../comments/comments.php?comment_id=CSSplay%20Vertical%20Blinds" title="CSSplay comments">COMMENTS</a></p>
+    </div>
+</div>
+</div> -->
+
+
+
+<div class="wrapper">
+<div class="curtain c1"><img class="bg" src="images/piks_002.png" alt="">
+    <div class="inner">
+        <div id="test" data-0="transform:rotate(0deg);" data-1000="transform:rotate(360deg);"><img src="images/text_big.png" /></div><br><section><div id="abstract"><b>ABSTRACT</b><br><br>Very often people tend to assume that certain things are real, even though there are no factual proofs about them.
+Since there is no possibility to doubt and double-check all the incoming information, partly due to it’s excessive amount, developed in rapidly evolving technological society, we often rely on what we can see in front of us, and take it’s trustworthiness as granted. This reliance on brief and shallow representations of information makes us particularly vulnerable to all kinds of deception and is directly linked with the concept of credibility, level of which determines how often we tend to believe in what we see. Merriam-Webster dictionary defines credibility as “the quality of being believed or accepted as true, real, or honest”. Roughly speaking, it means that if something looks real or believable we assume it’s credible.
+As an example of something non-existent but nevertheless believed-in I’m taking such a phenomena as hoaxes, since hoax is a large-scaled fabrication aimed at large groups of people (i.e. Loch-Ness Monster Surgeon photograph, Human Birdwings viral video, The War of the Worlds radio-drama, Sokal Affair fake <br><br><br>scientific article and many, many others) and therefore it requires as high level of credibility as possible, - and this is the main focus of my text.
+While focusing on hoaxes as an example, in my thesis I’m touching such topics as psychology of deception, sociological conventions, reality construct, mythology, culture, established meanings, semiotics, and, most importantly, the subject of what eventually can be interpreted as real, since as paradoxical as it might sound, many hoaxes while being discovered (and it’s what they are actually aiming for), are revealing the truth about the societal reality we live in.
+The topics described above are the essential fundament for credibility, and when used with knowledge, become a powerful mechanism for it to be executed. And of course, for any graphic designer it is crucial to be aware of it, since we are trained, not only visually but also contextually (because these two things are unseparatedly intertwined together), and given the power of perceptual influence and creating a layer in a reality other people are living in.</br></div></section>
+    </div>
+</div>
+
+<div class="curtain c2"><img class="bg" src="images/bg.png" alt=""><span class="overlay"></span><br>
+    <div class="inner">
+        <h1>"HOW CAN CREDIBILITY<br>Learn as if you were to live forever."</h1>
+        <h2>Mahatma Gandhi</h2>
+        <br>
+    </div>
+</div>
+</div> 
+
+
+<!-- <div id="footer" >
+    <img src="images/piks_002.png" />
+    <img src="images/piks_001.png" />
     <img src="images/bg.png" />
+</div> -->
+
+
+
+<!--  <div id="test" data-0="transform:rotate(0deg);" data-1000="transform:rotate(360deg);"><img src="images/text_big.png" /></div> -->
+
+<div id="background" >
+ <img src="images/bg2.png" />
 </div>
 
 
 
-<div id="footer">
 
-    <img src="images/text_big.png" />
-    <img src="images/bg2.png" />
-</div> 
-
-
-
+<script type="text/javascript" src="skrollr.min.js"></script>
+    <script type="text/javascript">
+    var s = skrollr.init();
+    </script>
 
 </body>
 </html>
