--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript">
         </script> 
 
+<script> 
+//<![CDATA[
+$(window).load(function(){
+$('#intro_animated_pik').click(function(){
+    $(this).toggleClass('rotated');
+});
+});//]]> 
 
+</script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
         </script>
@@ -280,7 +288,15 @@ https://vimeo.com/67627359
     
 <div id="index"> 
 
-  <!-- <div id="intro_animated_pik"></div> -->
+
+
+
+
+  <div id="intro_animated_pik"><img src="img/believe_it_or_not.png" ></div> 
+
+
+
+
 
     <div id="abstract_and_small_chapter_button"> <a href="#popup1"> <br> Abstract </a></div><br><br><br> 
     <div class="chapter_big_title">How can <br> credibility <br> be achieved <br>visually? </div>
